fix(vue): fixed height calculation in Collapse

--- a/packages/vue/src/components/Collapse.module.scss
+++ b/packages/vue/src/components/Collapse.module.scss
@@ -3,6 +3,8 @@
         height 0.2s ease-out,
         opacity 0.2s ease-out 0.1s;
     box-sizing: content-box;
+    display: flex;
+    flex-direction: column;
 }
 
 .active {
